// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferCard should render correctly on Main page 1`] = `
<div>
  <div
    class="cities__places-list places__list tabs__content"
  >
    <article
      class="cities__place-card place-card"
      id="1"
    >
      <div
        class="cities__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="200"
            width="260"
          />
        </a>
      </div>
      <div
        class="place-card__info "
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/1"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
    <article
      class="cities__place-card place-card"
      id="3"
    >
      <div
        class="cities__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="200"
            width="260"
          />
        </a>
      </div>
      <div
        class="place-card__info "
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/3"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
    <article
      class="cities__place-card place-card"
      id="2"
    >
      <div
        class="cities__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="200"
            width="260"
          />
        </a>
      </div>
      <div
        class="place-card__info "
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/2"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
  </div>
</div>
`;

exports[`Offers should render correctly Offers should render correctly on Favorite page 1`] = `
<div>
  <div
    class="cities__places-list places__list tabs__content"
  >
    <article
      class="favorites__card place-card"
      id="1"
    >
      <div
        class="favorites__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="110"
            width="150"
          />
        </a>
      </div>
      <div
        class="place-card__info favorites__card-info"
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/1"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
    <article
      class="favorites__card place-card"
      id="3"
    >
      <div
        class="favorites__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="110"
            width="150"
          />
        </a>
      </div>
      <div
        class="place-card__info favorites__card-info"
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/3"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
    <article
      class="favorites__card place-card"
      id="2"
    >
      <div
        class="favorites__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="110"
            width="150"
          />
        </a>
      </div>
      <div
        class="place-card__info favorites__card-info"
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/2"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
  </div>
</div>
`;

exports[`Offers should render correctly Offers should render correctly on Main page 1`] = `
<div>
  <div
    class="cities__places-list places__list tabs__content"
  >
    <article
      class="cities__place-card place-card"
      id="1"
    >
      <div
        class="cities__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="200"
            width="260"
          />
        </a>
      </div>
      <div
        class="place-card__info "
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/1"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
    <article
      class="cities__place-card place-card"
      id="3"
    >
      <div
        class="cities__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="200"
            width="260"
          />
        </a>
      </div>
      <div
        class="place-card__info "
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/3"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
    <article
      class="cities__place-card place-card"
      id="2"
    >
      <div
        class="cities__image-wrapper place-card__image-wrapper"
      >
        <a>
          <img
            alt="Place image"
            class="place-card__image"
            height="200"
            width="260"
          />
        </a>
      </div>
      <div
        class="place-card__info "
      >
        <div
          class="place-card__price-wrapper"
        >
          <div
            class="place-card__price"
          >
            <b
              class="place-card__price-value"
            >
              €
            </b>
            <span
              class="place-card__price-text"
            >
              / night
            </span>
          </div>
          <button
            class="place-card__bookmark-button button "
            type="button"
          >
            <svg
              class="place-card__bookmark-icon"
              height="19"
              width="18"
            >
              <use
                xlink:href="#icon-bookmark"
              />
            </svg>
            <span
              class="visually-hidden"
            >
              In bookmarks
            </span>
          </button>
        </div>
        <div
          class="place-card__rating rating"
        >
          <div
            class="place-card__stars rating__stars"
          >
            <span />
            <span
              class="visually-hidden"
            >
              Rating
            </span>
          </div>
        </div>
        <h2
          class="place-card__name"
        >
          <a
            href="/offer/2"
          />
        </h2>
        <p
          class="place-card__type"
        />
      </div>
    </article>
  </div>
</div>
`;
